# JM_TestCenter

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  tmp_req.txt  tmp_req2.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  2e10a8c1ee78_add_mysql_comments.py  b1c2d3e4f5a6_add_is_admin_to_users.py  c3f4a8b9d012_add_case_generation_tables.py  d8a2b7c1e9f0_add_case_management_tables.py  e1f9c2d7a4b6_add_steps_text_to_managed_cases.py  f8a9b0c1d2e3_add_execution_status_to_managed_cases.py  g9h0i1j2k3l4_add_ui_automation_tables.py  h0a1b2c3d4e5_drop_ui_automation_tables.py  i1a2b3c4d5e6_add_midscene_runs.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: seed.py  session.py
backend/app/repositories/: refresh_token_repo.py  user_repo.py
backend/app/schemas/: auth.py  case_gen.py  case_management.py  dashboard.py  menu.py  ui_automation.py  user.py
backend/app/services/: auth_service.py  case_gen_service.py  case_management_service.py  dashboard_service.py  midscene_run_service.py  user_service.py
backend/app/utils/: __init__.py  generation_errors.py
backend/midscene-runner/: README.md  package-lock.json  package.json
backend/midscene-runner/src/: run.ts
backend/playwright-runner/: PIPELINE_SPEC.md  README.md  package-lock.json  package.json
backend/playwright-runner/examples/: minimal.pipeline.json
backend/scripts/: verify_comments.py
backend/testcase/: .env.example  DESIGN.md  README.md  pyproject.toml
(+64 files in other folders)
